--- a/style.css
+++ b/style.css
@@ -1,14 +1,30 @@
 body {
-
-max-width: 90%;
-margin-left: 120px;
-margin-right: 120px;
-margin-top: 70px;
-padding: 20px;
-border: 1px solid pink;
+	margin: 0 auto;
+	margin-top: 50px;
 
 
 }
+
+.container{
+max-width: 1100px;
+margin: 0 auto;
+}
+
+.flex{
+	display: flex;
+}
+
+.self-center{
+	align-self: center;
+}
+
+.first{
+	width: 50%;
+}
+
+
+
+
 
 nav ul {
 	display: flex;
@@ -38,9 +54,30 @@ nav {
 .logoentete{
 	display: inline-block;
 	position: absolute;
-	top: 5px;
-	left: 30px;
+	top: 60px;
+	left: 200px;
+
 }
+
+.circle {
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    background: orangered;
+    font-family: sans-serif;
+    position: absolute;
+    top: 65px;
+    left: 150px;
+    font-size: 25px;
+    color: white;
+    text-align: center;
+
+
+}
+
+
+
+
 
 a.demo
 {
@@ -55,8 +92,8 @@ a.demo
 	text-align: center;
 	border-radius: 10px;
 	position: absolute;
-	top: 20px;
-	right: 20px;
+	top: 60px;
+	right: 80px;
 	font-family: lucida, sans-serif ;
 
 
@@ -107,9 +144,7 @@ a:hover.demo
 }
 
 
-div {
-	width: auto;
-}
+
 
 a.try1
 {
@@ -146,20 +181,295 @@ a:hover.try1
 	display: inline-block;
 	margin-left: 250px;
 	position: absolute;
-	top: 560px;
-	left: 120px;
+	top: 590px;
+	left: 90px;
 
 
 
-}
+}*/
 
 .graphique{
 	width: 900px;
 	height: 600px;
 	display: block;
 	padding: 50px;
-	background-color: orangered;
+	
+
+
 
     
 }
 
+/**.orange {
+	background-color: orangered;
+}**/
+
+.barlogo {
+	display: flex;
+	justify-content: space-evenly;
+	margin-top: 80px;
+	margin-bottom: 150px;
+	filter: grayscale(100%);
+
+}
+
+.logo {filter: opacity(50%);
+	margin-left: auto;
+	margin-right: auto;
+	align-items: flex-start;
+	justify-content: space-around;
+
+}
+
+/*.image2{
+	display: block;
+	float: right;
+	width: 500px;
+	height: 500px;
+	margin-left: 100px;
+	margin-bottom: 100px;
+	padding: 20px;
+}
+.texte5{
+   margin-bottom: 200px;
+   clear: left;
+
+
+p.texte5{
+	color: grey;
+}*/
+
+.orange {
+	background-color: orangered;
+	width: 100%;
+}
+.always{
+	font-size: 15px;
+	margin: auto;
+	text-transform: uppercase;
+	color: slategray;
+
+}
+
+.real{
+	font-size: 70px;
+	font-family: sans-serif;
+	padding-right: 100px;
+	margin: auto;
+	padding-top: 20px;
+	padding-bottom: 2px;
+}
+
+.tex{
+	color: slategray;
+	padding-right: 50px;
+	font-size: 15px;
+	font-family: sans-serif;
+	letter-spacing: 1px;
+	padding-bottom: 10px;
+}
+
+.learn{
+	text-decoration: none;
+	color: orangered;
+	font-family: sans-serif;
+
+
+}
+
+.column{
+	
+    width: 100%;
+	align-self: center;
+	justify-content: space-around;
+	padding-top: 60px;
+	line-height: 40px;
+
+}
+
+.starter {
+	
+	
+}
+
+.silver{
+	
+	
+
+}
+.diamond{
+	
+
+}
+
+.choose{
+	align-self: center;
+	justify-content: space-around;
+	padding-top: 130px;
+	font-size: 30px;
+	font-family: sans-serif;
+	font-weight: bold;
+}
+article ul li:before {
+	font-family: sans-serif;
+	color: grey;
+	content: "✔ ";
+
+
+}
+.col {
+	list-style-type: none;
+	padding: 0;
+	font-family: sans-serif;
+	letter-spacing: 1px;
+	font-size: 14px;
+	color: darkslategrey;
+	margin-bottom: 20px;
+}
+article>h3{
+	font-size: 23px;
+	letter-spacing: 1px;
+	font-family: sans-serif;
+
+
+}
+.prix{
+	font-family: sans-serif;
+	font-weight: bold;
+
+	
+	
+}
+
+.year {
+	color: lightslategray;
+	font-family: sans-serif;
+	font-size:12px ;
+	font-weight:lighter;
+	
+
+}
+
+.info{
+	color: lightslategray;
+	font-family: sans-serif;
+	font-size:12px ;
+	font-weight:lighter;
+
+
+
+}
+
+.textinfo{
+	line-height: 13px;
+}
+
+
+a.starterlink
+{
+	background-color: white;
+	border: thin solid orangered;
+	display: block;
+	width:160px;
+	height: 30px;
+	
+	text-decoration: none;
+	color: orangered;
+	text-align: center;
+	border-radius: 10px;
+	font-family: lucida, sans-serif ;
+	font-size: 14px;
+	padding-top: 13px;
+	margin-top: 50px;
+	margin-bottom: 230px;
+	
+   
+
+   
+
+}
+
+a:hover.starterlink
+{
+	background-color: orangered;
+	color: white;
+	border-color: orangered;
+}
+.photosfond{
+	width: 100%;
+	padding-top: 100px;
+}
+.orange{
+	padding-top: 100px;
+	width: 100%;
+	height: 625px;
+	background-color: orangered;
+}
+
+.countries{
+	
+	
+	position: absolute;
+	text-align: center;
+	top: 3100px;
+	left: 200px;
+	
+}
+
+.millions{
+	font-family: sans-serif;
+	font-size: 55px;
+	color: white;
+	font-weight: bold;
+	width: 900px;
+	margin-bottom: 0;
+
+}
+.trydemo{
+	font-size: 22px;
+	color: white;
+	font-family: sans-serif;
+	margin-left: 200px;
+	letter-spacing: 1px;
+
+}
+a.trytry{
+	
+
+	background-color: white;
+	border: thin solid orangered;
+	display: inline-block;
+	width:160px;
+	height: 30px;
+	
+	text-decoration: none;
+	color: orangered;
+	text-align: center;
+	border-radius: 10px;
+	font-family: lucida, sans-serif ;
+	font-size: 14px;
+	padding-top: 13px;
+	margin-top: 50px;
+	margin-bottom: 230px;
+	margin-left: 200px;
+	
+   
+
+   
+
+}
+
+a:hover.trytry{
+	background-color: orangered;
+	color: white;
+	border-color: orangered;
+}
+.col2{
+	justify-items: center;
+	justify-content: flex-start;
+	
+}
+
+.newsletter{
+	margin-left: 500px;
+}
