--- a/style.css
+++ b/style.css
@@ -471,5 +471,34 @@ a:hover.trytry{
 }
 
 .newsletter{
-	margin-left: 500px;
+	margin-left: 400px;
+}
+
+
+input[type=email]{
+	
+	border-style: none;
+	padding: 5px;
+	font-size: 15px;
+	word-spacing: 1px;
+	padding-left: 16px;
+
+
+}
+
+.boitenews{
+	margin-top: 50px;
+	border: 1px solid grey;
+	border-radius: 8px;
+	padding: 5px;
+}
+input[type=submit]{
+	background-color: orangered;
+	padding: 17px;
+	color: white;
+	border-radius: 10px;
+	border-style: none;
+	font-family: sans-serif;
+	font-size: 12px;
+
 }
