--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
 	margin: 0 auto;
 	margin-top: 50px;
+	
 
 
 }
 
 .container{
+	position: relative;
 max-width: 1100px;
 margin: 0 auto;
 }
@@ -52,29 +54,43 @@ nav {
 }
 
 .logoentete{
-	display: inline-block;
+	display: flex;
 	position: absolute;
-	top: 60px;
-	left: 200px;
+	align-items: center;
+	justify-content: space-around;
+	font-family: sans-serif;
+	top: 0px;
+	left: 50px;
+	padding: 10px;
+
+	
 
 }
 
-.circle {
+
+.x {
+	display: flex;
+    align-items: center;
+    justify-content: space-around;
+	font-weight: bold;
     width: 40px;
     height: 40px;
     border-radius: 20px;
     background: orangered;
     font-family: sans-serif;
     position: absolute;
-    top: 65px;
-    left: 150px;
-    font-size: 25px;
+  top: 0px;
+  left: 10px;
+    font-size: 20px;
     color: white;
-    text-align: center;
+    
+    
+
+
+
 
 
 }
-
 
 
 
@@ -92,8 +108,8 @@ a.demo
 	text-align: center;
 	border-radius: 10px;
 	position: absolute;
-	top: 60px;
-	right: 80px;
+	top: 0px;
+	right: 0px;
 	font-family: lucida, sans-serif ;
 
 
@@ -174,15 +190,17 @@ a:hover.try1
 	color: orangered;
 	border-color: orangered;
 }
+.boutonlogo{
+	display: flex;
+	justify-content: flex-start;
 
+}
 .web{
 
 
-	display: inline-block;
-	margin-left: 250px;
-	position: absolute;
-	top: 590px;
-	left: 90px;
+	display: flex;
+	padding-left: 20px;
+	
 
 
 
@@ -206,19 +224,24 @@ a:hover.try1
 
 .barlogo {
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-between;
+
 	margin-top: 80px;
-	margin-bottom: 150px;
+	margin-bottom: 100px;
 	filter: grayscale(100%);
+	
+	width: 100%;
+	
 
 }
 
-.logo {filter: opacity(50%);
-	margin-left: auto;
-	margin-right: auto;
-	align-items: flex-start;
-	justify-content: space-around;
+.logo {
+	filter: opacity(50%);
 
+	display: flex;
+	
+	
+	
 }
 
 /*.image2{
@@ -402,7 +425,7 @@ a:hover.starterlink
 .orange{
 	padding-top: 100px;
 	width: 100%;
-	height: 625px;
+	height: 600px;
 	background-color: orangered;
 }
 
@@ -411,8 +434,9 @@ a:hover.starterlink
 	
 	position: absolute;
 	text-align: center;
-	top: 3100px;
-	left: 200px;
+	top: -100px;
+	left: 100px;
+
 	
 }
 
@@ -423,14 +447,19 @@ a:hover.starterlink
 	font-weight: bold;
 	width: 900px;
 	margin-bottom: 0;
-
+	position: absolute;
+	
+	
 }
 .trydemo{
 	font-size: 22px;
 	color: white;
 	font-family: sans-serif;
-	margin-left: 200px;
+	width: 500px;
 	letter-spacing: 1px;
+position: absolute;
+top: 200px;
+left: 200px;
 
 }
 a.trytry{
@@ -439,8 +468,10 @@ a.trytry{
 	background-color: white;
 	border: thin solid orangered;
 	display: inline-block;
-	width:160px;
-	height: 30px;
+	
+	padding: 15px;
+	padding-left: 20px;
+	padding-right: 20px;
 	
 	text-decoration: none;
 	color: orangered;
@@ -448,10 +479,9 @@ a.trytry{
 	border-radius: 10px;
 	font-family: lucida, sans-serif ;
 	font-size: 14px;
-	padding-top: 13px;
-	margin-top: 50px;
-	margin-bottom: 230px;
-	margin-left: 200px;
+	position: absolute;
+	top:340px;
+	left: 380px;
 	
    
 
@@ -462,16 +492,41 @@ a.trytry{
 a:hover.trytry{
 	background-color: orangered;
 	color: white;
-	border-color: orangered;
+	border:2px solid white;
 }
 .col2{
-	justify-items: center;
-	justify-content: flex-start;
+	display: flex;
+	justify-content: space-around;
 	
+}
+.links{
+	list-style-type: none;
+text-decoration: none;
+color: black;
+font-family: sans-serif;
+
+padding: 50px;
+
+letter-spacing: 1.5px;
+line-height: 30px;
+
+
+
+
+}
+.copy{
+	padding-bottom: 80px;
+}
+a{
+	text-decoration: none;
+	color: black;
 }
 
 .newsletter{
-	margin-left: 400px;
+	
+	
+	width: 380px;
+	margin-right: 0;
 }
 
 
@@ -482,6 +537,7 @@ input[type=email]{
 	font-size: 15px;
 	word-spacing: 1px;
 	padding-left: 16px;
+	margin-right: 0;
 
 
 }
@@ -501,4 +557,10 @@ input[type=submit]{
 	font-family: sans-serif;
 	font-size: 12px;
 
+
+}
+.contact{
+	display: flex;
+	justify-content: space-evenly;
+	margin-top: 70px;
 }
